# ibledger

./: .cspell.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  cspell.sh  package.json  vega-dictionary.txt
cli/: Cargo.toml  README.md
cli/src/: config.rs  config_manager.rs  io.rs  lib.rs  password.rs
cli/src/command/: finalize.rs  generate_config.rs  generate_template.rs  maintenance.rs  mod.rs  run.rs  run_dev.rs
cli/tests/: cli.rs
components/api/: Cargo.toml  README.md
components/api/src/: cors.rs  error.rs  lib.rs  manager.rs  with.rs
components/api/src/backends/: actix.rs  mod.rs
components/crypto/: Cargo.toml  README.md  build.rs
components/crypto/src/: lib.rs  macros.rs
components/crypto/src/crypto_lib/: mod.rs
components/crypto/src/proto/: mod.rs  tests.rs
components/derive/: Cargo.toml  README.md
components/derive/src/: db_traits.rs  execution_fail.rs  lib.rs  require_artifact.rs  service_dispatcher.rs  service_factory.rs  vega_interface.rs
components/explorer/: Cargo.toml  LICENSE  README.md
components/explorer/examples/: explorer.rs
components/explorer/src/: api.rs  lib.rs
components/explorer/src/api/: websocket.rs
components/explorer/tests/: explorer.rs
components/explorer/tests/blockchain/: mod.rs
components/keys/: Cargo.toml  README.md
components/keys/src/: lib.rs
components/proto/: Cargo.toml  README.md  build.rs
components/proto/src/: lib.rs  macros.rs  tests.rs
components/proto/src/proto/: common.proto  mod.rs
components/system-api/: Cargo.toml  README.md
components/system-api/src/: lib.rs  private.rs  public.rs
components/system-api/tests/: system_api.rs
examples/cryptocurrency/: Cargo.toml  README.md
examples/cryptocurrency/examples/: demo.rs  ibchain.rs  test.sh
examples/cryptocurrency/src/: lib.rs  tx_tests.rs
examples/cryptocurrency/src/proto/: mod.rs  service.proto
examples/cryptocurrency/tests/: api.rs
examples/ibchain/backend/: Cargo.toml  build.rs
examples/ibchain/backend/src/: main.rs  schema.rs  wallet.rs
examples/sample_runtime/: Cargo.toml  README.md
examples/sample_runtime/src/: main.rs
examples/timestamping/backend/: Cargo.toml
examples/timestamping/backend/src/: api.rs  lib.rs  main.rs  schema.rs  transactions.rs
examples/timestamping/backend/tests/: api.rs
pwbox/: Cargo.toml  README.md
pwbox/examples/: key_util.rs  sodium_keypair.rs
pwbox/src/: cipher_with_mac.rs  erased.rs  lib.rs  rcrypto.rs  sodium.rs  traits.rs  utils.rs
pwbox/tests/: serialization.rs
runtimes/rust/: Cargo.toml  README.md  build.rs
runtimes/rust/benches/criterion/: block.rs  lib.rs
runtimes/rust/src/: api.rs  error.rs  lib.rs  runtime_api.rs  service.rs  stubs.rs
runtimes/rust/tests/: basic.rs  blockchain_data.rs  migration.rs
runtimes/rust/tests/inspected/: mod.rs
services/explorer/: Cargo.toml  README.md
services/explorer/src/: api.rs  lib.rs
services/explorer/tests/: api.rs  service_logic.rs  websocket.rs
services/explorer/tests/counter/: mod.rs
services/middleware/: Cargo.toml  README.md  build.rs
services/middleware/src/: lib.rs  transactions.rs
services/middleware/src/proto/: mod.rs  service.proto
services/middleware/tests/: tx_logic.rs
services/middleware/tests/inc/: mod.rs
services/supervisor/: Cargo.toml  README.md  build.rs
services/supervisor/examples/: configuration_change.rs
services/supervisor/src/: api.rs  configure.rs  deploy_state.rs  errors.rs  lib.rs  mode.rs  multisig.rs  proto_structures.rs  schema.rs  transactions.rs
services/supervisor/src/proto/: mod.rs  schema.proto  service.proto
services/supervisor/tests/: simple.rs
services/supervisor/tests/supervisor/: config.rs  config_api.rs  consensus_config.rs  deploy_failures.rs  inc.rs  main.rs  service_lifecycle.rs  supervisor_config.rs  utils.rs
services/time/: Cargo.toml  README.md  build.rs
services/time/examples/: exonum_time.rs
services/time/src/: api.rs  lib.rs  schema.rs  time_provider.rs  transactions.rs
services/time/src/proto/: mod.rs  (+1 more)
services/time/tests/: test_exonum_time.rs
test-suite/rust-runtime-api/: Cargo.toml  README.md  build.rs
test-suite/rust-runtime-api/src/: lib.rs  service.rs
test-suite/testkit/: Cargo.toml  README.md
test-suite/testkit/server/: Cargo.toml  package-lock.json  package.json
test-suite/testkit/src/: api.rs  builder.rs  checkpoint_db.rs  lib.rs  migrations.rs  network.rs  poll_events.rs  server.rs
test-suite/testkit/tests/: runtime.rs
vega/: Cargo.toml  README.md  build.rs
vega-node/: Cargo.toml  README.md  build.rs
vega-node/benches/: transactions.rs
vega-node/src/: basic.rs  connect_list.rs  consensus.rs  events_impl.rs  helpers.rs  lib.rs  plugin.rs  requests.rs  schema.rs  state.rs
vega-node/src/events/: codec.rs  error.rs  internal.rs  mod.rs  network.rs  tests.rs
vega-node/src/messages/: mod.rs  types.rs
vega-node/src/proto/: consensus.proto  mod.rs
vega-node/src/sandbox/: config_updater.rs  guarded_queue.rs  mod.rs  sandbox_tests_helper.rs  timestamping.rs
vega-node/tests/: node.rs
vega/benches/criterion/: crypto.rs  lib.rs
vega/fuzz/: Cargo.toml  README.md
vega/fuzz/fuzz_targets/: raw_message.rs
vega/src/: lib.rs
vega/src/blockchain/: api_sender.rs  block.rs  builder.rs  config.rs  mod.rs  schema.rs  tests.rs
vega/src/helpers/: mod.rs  ordered_map.rs  types.rs  user_agent.rs
vega/src/messages/: mod.rs  signed.rs  types.rs
vega/src/proto/: mod.rs  tests.rs
vega/src/runtime/: blockchain_data.rs  execution_context.rs  migrations.rs  mod.rs  types.rs  versioning.rs
vega_rocksdb/: Cargo.toml  README.md
vega_rocksdb/librocksdb-sys/: Cargo.toml
vega_rocksdb/librocksdb-sys/tests/: ffi.rs
vega_rocksdb/src/: db.rs  db_options.rs  lib.rs  merge_operator.rs  utils.rs
vega_rocksdb/test/: test.rs  test_column_family.rs  test_iterator.rs  test_multithreaded.rs  test_raw_iterator.rs  test_rocksdb_options.rs
vega_sodiumoxide/: Cargo.toml  README.md
vega_sodiumoxide/libsodium-sys/: Cargo.toml
vega_sodiumoxide/src/: lib.rs
(+197 files in other folders)
