[package]
name = "vega-node"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-node"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vega", "blockchain", "node"]
categories = ["cryptography"]
description = "Node of the Vega blockchain framework."

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
bit-vec = "0.6.0"
byteorder = { version = "1.2.7", features = [ "i128" ] }
bytes = "0.4.11"
chrono = "0.4.6"
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
protobuf = { version = "2.8.1", features = ["with-serde"] }
rand = "0.7"
serde = "1.0.101"
serde_derive = "1.0.101"
snow = { version = "0.6.0", default-features = false }
tokio = "0.1.14"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-io = "0.1.11"
tokio-retry = "0.2.0"
tokio-threadpool = "0.1.10"
tokio-dns-unofficial = "0.4.0"

vega = { version = "0.1.0", path = "../vega" }
vega-api = { version = "0.1.0", path = "../components/api" }
vega-derive = { version = "0.1.0", path = "../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../components/proto" }
vega_sodiumoxide= { version = "0.1.0", path = "../vega_sodiumoxide", optional = true}

[dev-dependencies]
bincode = "1.2.1"
criterion = "0.3.0"
hex = "0.4.0"
pretty_assertions = "0.6.1"
serde_json = "1.0.44"

vega-rust-runtime = { version = "0.1.0", path = "../runtimes/rust" }

[build-dependencies]
vega-build = { version = "0.1.0", path = "../components/build" }

[features]
default = ["vega_sodiumoxide"]

[[bench]]
name = "transactions"
harness = false
path = "benches/transactions.rs"
