[package]
name = "vega"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega"
readme = "README.md"
license = "Apache-2.0"
keywords = ["database", "distributed", "blockchain", "framework", "vega"]
categories = ["cryptography", "database-implementations"]
description = "An extensible framework for blockchain software projects."
autobenches = true
links = "vega_protobuf"

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
log = "0.4.6"
hex = "0.4"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_str = "0.1.0"
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1.25"
os_info = "1.0.1"
chrono = { version = "0.4.6", features = ["serde"] }
protobuf = { version = "2.8.1", features = ["with-serde"] }
semver = { version = "0.9.0", features = ["serde"] }

vega-crypto = { version = "0.1.0", path = "../components/crypto" }
vega-derive = { version = "0.1.0", path = "../components/derive" }
vega-keys = { version = "0.1.0", path = "../components/keys" }
vega-merkledb = { version = "0.1.0", path = "../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../components/proto" }

[dev-dependencies]
assert_matches = "1.3.0"
bincode = "1.2.0"
bit-vec = "0.6.0"
criterion = "0.3.0"
pretty_assertions = "0.6.1"
serde_json = "1.0.19"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/lib.rs"

[features]
default = ["with-serde", "rocksdb_snappy", "with-protobuf"]
float_serialize = []
long_benchmarks = []
with-serde = []
with-protobuf = ["with-serde"]
rocksdb_snappy = ["vega-merkledb/rocksdb_snappy"]
rocksdb_lz4 = ["vega-merkledb/rocksdb_lz4"]
rocksdb_zlib = ["vega-merkledb/rocksdb_zlib"]
rocksdb_zstd = ["vega-merkledb/rocksdb_zstd"]
rocksdb_bzip2 = ["vega-merkledb/rocksdb_bzip2"]

[build-dependencies]
vega-build = { version = "0.1.0", path = "../components/build" }

[package.metadata.docs.rs]
dependencies = [ "protobuf-compiler" ]
