[package]
name = "vega-api"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-api"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vega", "http"]
categories = ["cryptography"]
description = "HTTP API engine of the Vega framework"

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
actix = "0.7.9"
actix-net = "0.2.6"
actix-web = { version = "0.7.18", default-features = false }
chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.19"
serde_urlencoded = "0.6.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
toml = "0.5.5"
