[package]
name = "vega-crypto"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-crypto"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vega", "cryptography", "library"]
categories = ["cryptography", "hashing"]
description = "Cryptography related types, constants, traits and functions."
links = "vega_protobuf_crypto"

[dependencies]
hex = "0.4"
serde = "1.0.101"
serde_derive = "1.0.101"
failure = "0.1.5"
vega_sodiumoxide= { version = "0.1.0", path = "../../vega_sodiumoxide" , optional = true}
vega-proto = { path = "../proto", version = "0.1.0", optional = true }
protobuf = { version = "2.8.1", features = ["with-serde"], optional = true }

[dev-dependencies]
serde_json = "1.0.44"
tempdir = "0.3.7"

[features]
default = ["sodiumoxide-crypto", "with-protobuf", "with-serde"]
sodiumoxide-crypto = ["vega_sodiumoxide"]
with-protobuf = ["vega-proto", "protobuf"]
with-serde = []

[build-dependencies]
vega-build = { version = "0.1.0", path = "../build" }
