[package]
name = "vega-derive"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-derive"
readme = "README.md"
license = "Apache-2.0"
keywords = ["protobuf", "vega"]
categories = ["development-tools"]
description = "Procedural macros for Vega framework."

[lib]
proc-macro = true

[dependencies]
darling = "0.10.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
semver = "0.9"
