[package]
name = "vega-system-api"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-system-api"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vega", "http", "plugin"]
categories = ["cryptography"]
description = "System API plugin for the Vega framework"

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
vega = { version = "0.1.0", path = "../../vega" }
vega-api = { version = "0.1.0", path = "../api" }
vega-node = { version = "0.1.0", path = "../../vega-node" }

actix-web = { version = "0.7.18", default-features = false }
futures = "0.1.25"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
vega-testkit = { version = "0.1.0", path = "../../test-suite/testkit", features = ["vega-node"] }
pretty_assertions = "0.6.1"
