[package]
name = "vega-cryptocurrency"
publish = false
version = "0.0.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://vega.com/doc/version/latest/get-started/create-service"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vega", "blockchain", "example"]
categories = ["rust-patterns"]
description = "Minimal Vega blockchain example implementing a simple cryptocurrency."

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
vega = { version = "0.1.0", path = "../../vega" }
vega-crypto = { version = "0.1.0", path = "../../components/crypto" }
vega-derive = { version = "0.1.0", path = "../../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../../components/proto" }
vega-rust-runtime = { version = "0.1.0", path = "../../runtimes/rust" }

failure = "0.1.5"
protobuf = "2.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
vega-explorer-service = { version = "0.1.0", path = "../../services/explorer" }
vega-node = { version = "0.1.0", path = "../../vega-node" }
vega-system-api = { version = "0.1.0", path = "../../components/system-api" }
vega-testkit = { version = "0.1.0", path = "../../test-suite/testkit" }

assert_matches = "1.2.0"
pretty_assertions = "0.6.1"
rand = "0.7"

[build-dependencies]
vega-build = { version = "0.1.0", path = "../../components/build" }
