[package]
name = "vega-sample-runtime"
version = "0.1.0"
authors = ["The Vega Team <contact@vega.com>"]
edition = "2018"
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
license = "Apache-2.0"
keywords = ["vega", "blockchain", "example"]
categories = ["rust-patterns"]
description = "Minimal Vega blockchain example implementing a simple runtime."

[dependencies]
futures = "0.1.25"

vega = { version = "0.1.0", path = "../../vega" }
vega-derive = { version = "0.1.0", path = "../../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../../components/merkledb" }
vega-node = { version = "0.1.0", path = "../../vega-node" }
vega-supervisor = { version = "0.1.0", path = "../../services/supervisor" }
vega-rust-runtime = { version = "0.1.0", path = "../../runtimes/rust" }
