[package]
name = "vega-rust-runtime"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <vega@bitfury.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-rust-runtime"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vega", "runtime"]
categories = ["cryptography"]
description = "The runtime is for running Vega services written in Rust."

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
vega = { version = "0.1.0", path = "../../vega" }
vega-api = { version = "0.1.0", path = "../../components/api" }
vega-derive = { version = "0.1.0", path = "../../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../../components/proto" }

failure = "0.1.5"
futures = "0.1.25"
log = "0.4.8"
protobuf = "2.10.1"
serde = "1.0.101"
serde_derive = "1.0.101"

[dev-dependencies]
assert_matches = "1.3.0"
bincode = "1.2.1"
criterion = "0.3.0"
pretty_assertions = "0.6.1"
rand = "0.7"
serde_json = "1.0.44"
tempfile = "3"

[build-dependencies]
vega-build = { version = "0.1.0", path = "../../components/build" }

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/lib.rs"
