[package]
name = "vega-middleware-service"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <vega@bitfury.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-middleware-service"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vega", "batch", "versioning"]
categories = ["cryptography"]
description = "Composability utilities for Vega, packaged as a service"

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
vega = { version = "0.1.0", path = "../../vega" }
vega-derive = { version = "0.1.0", path = "../../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../../components/proto" }
vega-rust-runtime = { version = "0.1.0", path = "../../runtimes/rust" }

failure = "0.1.5"
protobuf = "2.8.0"
semver = { version = "0.9.0", features = ["serde"] }
serde = "1.0.101"
serde_derive = "1.0.101"

[dev-dependencies]
vega-testkit = { version = "0.1.0", path = "../../test-suite/testkit" }
serde_json = "1.0.42"

[build-dependencies]
vega-build = { version = "0.1.0", path = "../../components/build" }
