[package]
name = "vega-supervisor"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
readme = "README.md"
license = "Apache-2.0"

keywords = ["vega", "service", "library"]
categories = ["cryptography"]
description = "Vega supervisor service."

[dependencies]
byteorder = { version = "1.2.7", features = [ "i128" ] }
failure = "0.1.5"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
serde_str = "0.1.0"
protobuf = "2.8.0"
log = "0.4.6"
hex = "0.4"

vega = { version = "0.1.0", path = "../../vega" }
vega-derive = { version = "0.1.0", path = "../../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../../components/proto" }
vega-rust-runtime = { version = "0.1.0", path = "../../runtimes/rust" }

[dev-dependencies]
futures = "0.1.25"
vega-testkit = { version = "0.1.0", path = "../../test-suite/testkit" }

[build-dependencies]
vega-build = { version = "0.1.0", path = "../../components/build" }
