[package]
name = "vega-time"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-time"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vega", "time"]
categories = ["cryptography", "date-and-time"]
description = "The time oracle service for Vega."

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
vega = { version = "0.1.0", path = "../../vega" }
vega-api = { version = "0.1.0", path = "../../components/api" }
vega-derive = { version = "0.1.0", path = "../../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../../components/proto" }
vega-rust-runtime = { version = "0.1.0", path = "../../runtimes/rust" }

chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.5"
protobuf = "2.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
vega-cli = { version = "0.1.0", path = "../../cli" }
vega-supervisor = { version = "0.1.0", path = "../supervisor" }
vega-testkit = { version = "0.1.0", path = "../../test-suite/testkit" }

bincode = "1.2.1"
pretty_assertions = "0.6.1"

[build-dependencies]
vega-build = { version = "0.1.0", path = "../../components/build" }
