[package]
name = "vega-rust-runtime-api-tests"
version = "0.0.0"
edition = "2018"
authors = ["The Vega Team <vega@bitfury.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
readme = "README.md"
description = "The test crate for testing rust runtime API endpoints."
publish = false

[dependencies]
vega = { version = "0.1.0", path = "../../vega" }
vega-derive = { version = "0.1.0", path = "../../components/derive" }
vega-rust-runtime = { version = "0.1.0", path = "../../runtimes/rust" }
vega-testkit = { version = "0.1.0", path = "../../test-suite/testkit" }

protobuf = "2.10.1"
pretty_assertions = "0.6.1"

[build-dependencies]
vega-build = { version = "0.1.0", path = "../../components/build" }
