[package]
name = "vega-testkit"
version = "0.1.0"
edition = "2018"
authors = ["The Vega Team <contact@vega.com>"]
homepage = "https://vega.com/"
repository = "https://github.com/vega/vega"
documentation = "https://docs.rs/vega-testkit"
readme = "README.md"
license = "Apache-2.0"
keywords = ["test", "blockchain", "framework", "vega"]
categories = ["development-tools::testing"]
description = """
Testkit for Vega blockchain framework, allowing to test service APIs
synchronously.
"""

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
vega = { version = "0.1.0", path = "../../vega" }
vega-api = { version = "0.1.0", path = "../../components/api" }
vega-derive = { version = "0.1.0", path = "../../components/derive" }
vega-explorer = { version = "0.1.0", path = "../../components/explorer" }
vega-merkledb = { version = "0.1.0", path = "../../components/merkledb" }
vega-node = { version = "0.1.0", path = "../../vega-node", optional = true }
vega-rust-runtime = { version = "0.1.0", path = "../../runtimes/rust" }

actix-net = "0.2.6"
actix = "0.7.9"
actix-web = { version = "0.7.18", default-features = false }
chrono = "0.4.6"
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
reqwest = "0.9.8"
serde = "1.0.10"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6.0"
tokio-core = "0.1.17"

[dev-dependencies]
assert_matches = "1.2.0"
bincode = "1.2.1"
hex = "0.4"
lazy_static = "1.0.0"
pretty_assertions = "0.6.1"
rand = "0.7"
thread_local = "1.0.0"
