[package]
name = "ibchain"
version = "0.0.1"
edition = "2018"
authors = ["Olabode Adebayo"]
homepage = "https://inksnation.io"
repository = "https://github.com/ibchain/ibchain"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ibchain", "blockchain", "example"]
categories = ["rust-patterns", "development-tools::testing"]
description = "IBChain blockchain infrastructure."

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
vega = { version = "0.1.0", path = "../../../vega" }
vega-derive = { version = "0.1.0", path = "../../../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../../../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../../../components/proto" }
vega-cli = { version = "0.1.0", path = "../../../cli" }
vega-rust-runtime = { version = "0.1.0", path = "../../../runtimes/rust" }

failure = "0.1.5"
protobuf = "2.8.0"
serde = "1.0.0"
serde_derive = "1.0.0"

[dev-dependencies]
vega-explorer-service = { version = "0.1.0", path = "../../../services/explorer" }
vega-testkit = { version = "0.1.0", path = "../../../test-suite/testkit" }

assert_matches = "1.2.0"
bincode = "1.2.1"
hex = "0.4"
pretty_assertions = "0.6.1"
serde_json = "1.0.0"

[build-dependencies]
vega-build = { version = "0.1.0", path = "../../../components/build" }

[features]
default = ["with-serde"]
with-serde = []
