[package]
name = "vega-timestamping"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["The Vega Team <contact@vega.com>"]
repository = "https://github.com/vega/vega"
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "vega/vega" }

[dependencies]
vega = { version = "0.1.0", path = "../../../vega" }
vega-cli = { version = "0.1.0", path = "../../../cli" }
vega-derive = { version = "0.1.0", path = "../../../components/derive" }
vega-merkledb = { version = "0.1.0", path = "../../../components/merkledb" }
vega-proto = { version = "0.1.0", path = "../../../components/proto" }
vega-rust-runtime = { version = "0.1.0", path = "../../../runtimes/rust" }
vega-time = { version = "0.1.0", path = "../../../services/time" }

chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.5"
log = "0.4.6"
protobuf = "2.8.0"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"

[dev-dependencies]
vega-explorer-service = { version = "0.1.0", path = "../../../services/explorer" }
vega-testkit = { version = "0.1.0", path = "../../../test-suite/testkit" }

pretty_assertions = "0.6.1"

[build-dependencies]
vega-build = { version = "0.1.0", path = "../../../components/build" }

[features]
default = ["with-serde"]
with-serde = []
